frontend/src/components/compiler/CompilerOpts.module.css
.header {
    padding: 1.5em;
    padding-bottom: 0;
    background: transparent;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 1em;

    cursor: default;
}

.header > * {
    flex-shrink: 0;
    border-radius: 0;
}

.section {
    padding: 1.5em;
    border-radius: 0;
    background: transparent;
}

.section:not(:last-child) {
    border-bottom: 1px solid var(--a100);
}

.heading {
    font-size: 1.1em;
    font-weight: 500;

    padding: 0.5em;
    padding-top: 0;

    color: var(--g1200);
}

.preset {
    font-size: 0.8em;
    color: var(--g1200);

    display: flex;
    align-items: center;
    gap: 10px;
}

.row {
    display: flex;
}

.compilerSelect {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-right: 0;
}

.textbox {
    flex: 1;

    background: var(--g200);
    border: 1px solid var(--g400);
    color: var(--frog-secondary);

    border-radius: 4px;

    font-family: var(--monospace);
    font-size: 0.8rem;

    padding: 0.6em 1em;

    outline: none !important;
}

.textbox::-webkit-input-placeholder {
    color: var(--g500);
    font-family: var(--font-ui);
}

.compilerSelect + .textbox {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.flags {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5em;
    margin-top: 1em;
}

.diffFlags {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5em;
    margin-top: 1em;
}

.flag {
    flex-grow: 1;
    display: inline-block;
    cursor: default;
    padding: 0.75em;
    border-radius: 12px;

    border: 1px solid transparent;
}

.flag:hover {
    background: var(--g250);
    border-color: var(--g500);
}

.flag label {
    font-size: 0.9rem;
    margin-left: 0.5em;
}

.flag input {
    pointer-events: none;
}

.flagDescription {
    display: block;
    font-size: 0.8em;
    color: var(--g800);
}

.flagSet {
    flex-grow: 1;

    display: inline-flex;
    flex-direction: column;

    min-width: 50%;
    border-radius: 0.5em;
}

.flagSetName,
.diffLabel label {
    cursor: default;
    font-size: 0.8rem;
    padding: 0.6em 1em;
    padding-bottom: 0.2em;
    color: var(--g800);
}

.diffLabel input {
    display: block;
    width: 100%;
}

.libraryName {
    cursor: default;
    font-size: 0.8rem;

    font-size: 1.0em;
    font-weight: 500;

    padding: .5em;

}

.librarySelect {
    flex-grow: 1;
}

.deleteButton {
    display: flex;
    align-items: center;
    gap: 4px;
    padding: 4px 8px;

    cursor: pointer;

    color: var(--g1900);
    background: none;
    border: 0;

}

.deleteButton > svg {
    width: 1em;
    color: var(--g1200);
}

.deleteButton:hover {
    border-radius: 4px;
    color: var(--g2000);
    background: var(--g400);
}

.addLibraryRow {
    display: inline-flex;
    margin: 1em;
    margin-bottom: 0;
    width: 100%;
}

.addLibraryRow > button {
    margin-left: 1em;
    margin-right: 1em;
}

.librariesGrid {
    margin-top: 1.5em;
    display: grid;
    grid-template-columns: max-content 1fr max-content;
    grid-auto-flow: row;
    gap: 0.4em 0;
}

